apps/k8s/admin/actual-budget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  namespace: admin
spec:
  selector:
    app: actual-budget
  ports:
  - port: 5006
    targetPort: 5006
