apps/k8s/admin/actual-budget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget-ingress
  namespace: admin
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Actual Budget"
    gethomepage.dev/group: "Finance"
    gethomepage.dev/icon: "actual-budget.png"
    gethomepage.dev/description: "Personal budgeting"
spec:
  rules:
  - host: ab.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual-budget
            port:
              number: 5006
